[gd_scene load_steps=8 format=3 uid="uid://dcc6jvd4qehdq"]

[ext_resource type="Texture2D" uid="uid://bgcvio3c5ygos" path="res://icon.svg" id="1_3etf2"]
[ext_resource type="Script" uid="uid://c1wbvfotuhmqx" path="res://Scripts/Characters/player.gd" id="1_gy20a"]
[ext_resource type="PackedScene" uid="uid://61mqwnumymki" path="res://Scenes/Menus/inGame/playerGUI.tscn" id="2_gy20a"]
[ext_resource type="Script" uid="uid://cdb10yndskd6k" path="res://Scripts/Characters/moveComponent.gd" id="3_cqrjx"]

[sub_resource type="Animation" id="Animation_gy20a"]
resource_name = "null"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cqrjx"]
_data = {
&"null": SubResource("Animation_gy20a")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_40svl"]
radius = 16.0
height = 64.0

[node name="Player" type="CharacterBody2D"]
z_index = 2
collision_layer = 2
script = ExtResource("1_gy20a")
loadGuiScene = ExtResource("2_gy20a")

[node name="endlag" type="Timer" parent="."]

[node name="animations" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cqrjx")
}

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(0.7, 0.7)

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_40svl")

[node name="PLACEHOLDER" type="Sprite2D" parent="."]
position = Vector2(0, 8)
scale = Vector2(0.359375, 0.359375)
texture = ExtResource("1_3etf2")

[node name="moveAddons" type="Node" parent="."]

[node name="movementComponent" type="Node" parent="moveAddons"]
script = ExtResource("3_cqrjx")

[connection signal="timeout" from="endlag" to="." method="_end_lag"]
